Rshiny2/r-ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: r-ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: / 
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /diabetestab/
      # app deployed to /diabetestab/
        backend:
          serviceName: shiny2
          servicePort: 8081
      - path: /zipmap/
      # app deployed to /zipmap/
        backend:
          serviceName: shiny1
          servicePort: 8080
